--- a/.env
+++ b/.env
@@ -5,4 +5,7 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="file:./dev.db"
-NEXTAUTH_SECRET=dHJlaW5hYmxvZy1zZWNyZXQ=
+NEXTAUTH_SECRET=
+
+GITHUB_ID=
+GITHUB_SECRET=
